--- a/style.css
+++ b/style.css
@@ -1,12 +1,62 @@
 :root {
 	--hero-bg: url("");
+	--primary: #bd6400;
+	--primary-variant1: #ff9236;
+	--primary-variant2: #ffc28f;
+	--primary-variant3: #fff3e9;
+	--secondary: #095b76;
+	--secondary-variant1: #0d85ad;
+	--secondary-variant2: #3fc5f0;
+	--secondary-variant3: #f3faf9;
+	--dark: #031c25;
+	--gray: #495c63;
+	--light: #fafdff;
 }
 
 body {
 	padding-top: 56px;
 }
 
+.bg-primary {
+	background-color: var(--primary) !important;
+}
+.bg-secondary {
+	background-color: var(--secondary) !important;
+}
+.bg-dark {
+	background-color: var(--dark) !important;
+}
+.bg-light {
+	background-color: var(--light) !important;
+}
+
+@media (min-width: 992px) {
+	.navbar-expand-lg .offcanvas {
+		background-color: transparent !important;
+	}
+}
+.navbar-dark .navbar-nav .nav-link,
+footer .nav-link {
+	color: var(--light);
+}
+
+.btn-primary,
+.btn-primary:focus {
+	background-color: var(--primary);
+	border-color: var(--primary);
+}
+
+.btn-primary:hover {
+	background-color: var(--primary-variant1);
+	border-color: var(--primary-variant1);
+}
+
+.border-primary {
+	border-color: var(--primary) !important;
+}
+
 .hero {
+	margin: -65px;
 	min-height: 95vh;
 	max-height: 810px;
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), var(--hero-bg) no-repeat center center fixed;
@@ -15,5 +65,4 @@ body {
 
 #hero-home {
 	--hero-bg: url("img/3.jpg");
-	/* --hero-bg: url("https://static2-viaggi.corriereobjects.it/wp-content/uploads/2019/11/1-1.jpg?v=353239") */
 }
