--- a/style.css
+++ b/style.css
@@ -175,3 +175,13 @@ h3 {
 #hero-unisciti {
   --hero-bg: url("img/3.jpg");
 }
+
+footer::before {
+  content: url(img/separatore50.png);
+  position: relative;
+  margin: 0 auto;
+  top: -25px;
+  left: 50%;
+  margin-left: -25px;
+  z-index: 10000000;
+}
