--- a/style.css
+++ b/style.css
@@ -176,11 +176,11 @@ h3 {
   --hero-bg: url("img/3.jpg");
 }
 
-footer::before {
+footer::before,
+section:not(.hero)::before {
   content: url(img/separatore50.png);
   position: relative;
-  margin: 0 auto;
-  top: -25px;
+  top: -26.5px;
   left: 50%;
   margin-left: -25px;
   z-index: 10000000;
