rinominato istruzione in formazione

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ h3,
 #hero-servizi {
   --hero-bg: url("img/3.jpg");
 }
-#hero-istruzione {
+#hero-formazione {
   --hero-bg: url("img/3.jpg");
 }
 #hero-benessere {
