--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 
 :root {
   --hero-bg: url(".");
-  --primary: #bd6400;
-  --primaryWAlpha: rgba(189, 100, 0, 0.4);
+  --primary: #ff97e8;
+  --primaryWAlpha: rgba(255, 151, 232, 0.4);
   --primary-variant1: #ff9236;
   --primary-variant2: #ffc28f;
   --primary-variant3: #fff3e9;
@@ -183,7 +183,7 @@ h3,
   min-height: 100vh;
   max-height: 810px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    var(--hero-bg) no-repeat center center fixed;
+    var(--hero-bg) no-repeat center center scroll;
   background-size: cover;
 }
 #hero-home {
@@ -232,6 +232,17 @@ h3,
     width: 50%;
     right: 0;
   }
+}
+
+.composition-servizi {
+  position: relative;
+}
+.composition-servizi img {
+  position: absolute;
+}
+.composition-servizi img:last-child {
+  bottom: 30px;
+  z-index: 2;
 }
 
 /* footer::before,
