--- a/style.css
+++ b/style.css
@@ -234,14 +234,11 @@ h3,
   }
 }
 
-.composition-servizi {
-  position: relative;
-}
 .composition-servizi img {
-  position: absolute;
+  width: 60%;
 }
 .composition-servizi img:last-child {
-  bottom: 30px;
+  margin-top: -10%;
   z-index: 2;
 }
 
