--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ a {
   --hero-bg: url("img/3.jpg");
 }
 #hero-benessere {
-  --hero-bg: url("img/3.jpg");
+  --hero-bg: url("img/HeaderBenessere.jpg");
 }
 #hero-eventi {
   --hero-bg: url("img/3.jpg");
