modified hero-content background color

--- a/style.css
+++ b/style.css
@@ -199,10 +199,10 @@ a {
   --hero-bg: url("img/3.jpg");
 }
 #hero-servizi {
-  --hero-bg: url("img/3.jpg");
+  --hero-bg: url("img/Header_Servizi.jpg");
 }
 #hero-formazione {
-  --hero-bg: url("img/3.jpg");
+  --hero-bg: url("img/Header_Formazione.jpg");
 }
 #hero-benessere {
   --hero-bg: url("img/HeaderBenessere.jpg");
